WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156895
[JSC] Integer Multiply of a number by itself does not need negative zero support
https://bugs.webkit.org/show_bug.cgi?id=156895
Summary
[JSC] Integer Multiply of a number by itself does not need negative zero support
Benjamin Poulain
Reported
2016-04-22 00:25:32 PDT
[JSC] Integer Multiply of a number by itself does not need negative zero support
Attachments
Patch
(3.33 KB, patch)
2016-04-22 00:27 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch
(4.19 KB, patch)
2016-04-22 00:45 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch
(4.87 KB, patch)
2016-04-22 10:40 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2016-04-22 00:27:01 PDT
Created
attachment 277015
[details]
Patch
Benjamin Poulain
Comment 2
2016-04-22 00:45:39 PDT
Created
attachment 277019
[details]
Patch
Saam Barati
Comment 3
2016-04-22 10:30:26 PDT
Comment on
attachment 277019
[details]
Patch r=me with maybe a build fix for iOS?
Benjamin Poulain
Comment 4
2016-04-22 10:33:41 PDT
(In reply to
comment #3
)
> Comment on
attachment 277019
[details]
> Patch > > r=me with maybe a build fix for iOS?
Thanks Saam. I'll fix iOS before landing.
Benjamin Poulain
Comment 5
2016-04-22 10:40:42 PDT
Created
attachment 277074
[details]
Patch
WebKit Commit Bot
Comment 6
2016-04-22 12:27:36 PDT
Comment on
attachment 277074
[details]
Patch Clearing flags on attachment: 277074 Committed
r199894
: <
http://trac.webkit.org/changeset/199894
>
WebKit Commit Bot
Comment 7
2016-04-22 12:27:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug